@@ -1,7 +1,7 @@
 from setuptools import setup, find_packages
 import os
 
-version = '0.10.1dev'
+version = '0.11.0dev'
 
 setup(name='Products.AROfficeTransforms',
       version=version,
